kubernetes/prod/app-prod-deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-prod
  template:
    metadata:
      labels:
        app: redis-prod
    spec:
      containers:
      - name: redis-prod
        image: redis:latest
        ports:
        - containerPort: 6379
