kubernetes/prod/app-prod-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-prod
spec:
  selector:
    app: flask-app-prod
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
