kubernetes/prod/app-prod-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport-service-prod
spec:
  type: NodePort
  selector:
    app: flask-app-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
